# graspg

./: README.md
graspgtest/: Readme
graspgtest/script1/: out_csf  out_csfg  run.sh
graspgtest/script1/csf/: sh_files_c  sh_initial  sh_scf
graspgtest/script1/csfg/: sh_csfg  sh_files_c  sh_initial  sh_scf  sh_tr
graspgtest/script2/: clean.sh  out_csf  out_csfg  run.sh
graspgtest/script2/csf/: sh_files_c  sh_initial  sh_scf
graspgtest/script2/csfg/: clean  sh_files_c  sh_initial  sh_nuc  sh_scf
graspgtest/script3/: out_csf  out_csf_CSFGExp  out_csfg  run.sh
graspgtest/script3/csf/: sh_csf  sh_files_c  sh_scf
graspgtest/script3/csf_CSFGExp/: sh_cp_exp  sh_csf  sh_initial  sh_scf
graspgtest/script3/csfg/: sh_files_c  sh_scf  sh_tr
graspgtest/script3_ZF/: run.sh
graspgtest/script3_ZF/csf/: sh_files_c  sh_files_c_full  sh_files_c_mr  sh_files_c_zero  sh_scf
graspgtest/script3_ZF/csf_CSFGExp/: sh_disks  sh_files_c  sh_files_c_full  sh_scf
graspgtest/script3_ZF/csfg/: clean  sh_disks  sh_files_c  sh_files_c_mr  sh_files_c_zero  sh_scf
graspgtest/script4/: run.sh
graspgtest/script4/csf/: sh_ci  sh_files_c  sh_files_c_ci  sh_initial  sh_scf
graspgtest/script4/csfg/: clean  sh_ci  sh_csfg  sh_files_c  sh_files_c_ci  sh_initial  sh_scf
graspgtest/script5/: clean.sh  run.sh
graspgtest/script5/01_block/: sh_ci  sh_nuc
graspgtest/script5/02_RAC_LBr/: clean  sh_ci
graspgtest/script5/03_RAC_Ext_LBr/: sh_ci
graspgtest/script5/files_gwl/: CIn4.w  CIn5.w  CIn6.w  CIn7.w  CIn8.w  CIn9.w
srcg/: README_graspg.md
srcg/appl/: Makefile
srcg/appl/jj2lsj90_csfg/: Makefile  jj2lsj2K.f90  jj2lsj_code.f90
srcg/appl/rangular90_csfg_mpi/: BUILDCONF.sh  CMakeLists.txt  Makefile  genmcpmpi.f90  getinf.f90  mcpmpi_csfg.f90  outsdampi.f90  savetv.f90  setmcp_csfg.f90  setmcp_csfg_I.f90  setmcpmpi.f90  setsda_csfg.f90  setsda_csfg_I.f90  settmp.f90  sort.f90  sortdiagv.f90  sortoffdv.f90  spinangular1.f90  spinangular11.f90  spinangular12.f90  spinangular13.f90  spinangular14.f90  spinangular15.f90  spinangular2.f90  spinangular22.f90  spinangular23.f90  spinangular24.f90  spinangular25.f90  spinangular3.f90  spinangular33.f90  spinangular34.f90  spinangular35.f90  spinangular4.f90  spinangular44.f90  spinangular45.f90  spinangular5.f90  spinangular55.f90  transfer_csfg.f90
srcg/appl/rci90_block_csfg_mpi/: BUILDCONF.sh  CMakeLists.txt  Makefile  README.txt  genmat.f90  getcid.f90  lodres.f90  lodstate_sym.f90  lodstate_sym_I.f90  maneigmpi.f90  matrix.f90  rci90mpi.f90  setham_gg.f90  setres.f90
srcg/appl/rci90_csfg_mpi/: BUILDCONF.sh  CMakeLists.txt  Makefile  genmat.f90  getcid.f90  lodres.f90  maneigmpi.f90  matrix.f90  rci90mpi.f90  setham_gg.f90  setres.f90
srcg/appl/rcsfggenerate90_csfg/: BUILDCONF.sh  CMakeLists.txt  Makefile  Makefile_gg  adder.f90  adder_I.f90  blanda.f90  blanda_I.f90  blandb.f90  blandb_I.f90  blandc.f90  blandc_I.f90  copy7t9.f90  fivefirst.f90  fivefirst_I.f90  fivelines.f90  fivelines_I.f90  gen_I.f90  genb.f90  jjgen15b.f90  lasa1.f90  lasa1_I.f90  lasax-reada.f90  lika.f90  lika_I.f90  lockad.f90  lockad_I.f90  matain.f90  matain_I.f90  matbin.f90  matbin_I.f90  matcin.f90  matcin_I.f90  merge.f90  merge_I.f90  mergeb.f90  open79.f90  rcsfblock.f90  rcsfexcitation.f90  rcsfsym.f90  (+13 more)
srcg/appl/rcsfginteract90_csfg/: 1.txt  3.txt  BUILDCONF.sh  CMakeLists.txt  Interact_csf.f90  Interact_csf_I.f90  Makefile  RCSFinteract.f90  debug_C.f90  hblock_C.f90  ichop_I.f90  iq_I.f90  ispar.f90  itjpo.f90  jcup.f90  lodcsl_CSF.f90  lodcsl_CSF_I.f90  lodcsl_MR.f90  memory_man.f90  orb_C.f90  parameter_def_M.f90  prsrsl.f90  rang_Int_C.f90  set_CSF_list.f90  set_CSF_number.f90  set_CSF_number_full.f90  set_CSF_number_full_I.f90  setqna.f90  stoptime_I.f90  terms_C.f90  testfiles.f90
srcg/appl/rcsfgzerofirst90_csfg/: BUILDCONF.sh  CMakeLists.txt  Makefile  RCSFzerofirst.f90  lodcsl_Full.f90  lodcsl_Full_I.f90  lodcsl_Zero.f90  lodcsl_Zero_I.f90  removeblank.f90  removeblank_I.f90  set_CSF_ZFlist.f90  set_CSF_number.f90  set_CSF_numberF.f90  set_CSF_numberF_I.f90  symzf_mod.f90
srcg/appl/rmcdhf90_csfg_mpi/: CMakeLists.txt  Makefile  calddrs.f90  calddrs_I.f90  cofpotmpi.f90  consis.f90  csfg_expand_findtype.f90  csfg_iqa.f90  csfwgt.f90  dacon.f90  dacon_I.f90  dampor.f90  dsubrs.f90  endsum.f90  estim.f90  genintrk_csfg.f90  genintrk_csfg_I.f90  genintrkwrap_csfg.f90  genintrkwrap_csfg_I.f90  getaldmpi.f90  getoldmpi.f90  getscdmpi.f90  hmoutmpi.f90  hmoutmpi_I.f90  improvmpi.f90  lagcon.f90  locate.f90  locate_I.f90  locateall.f90  locateall_I.f90  lodcsh2GG.f90  lodcslmpiGG.f90  maneig_csfg.f90  maneig_csfg_I.f90  matrix_csfg.f90  matrix_csfg_I.f90  maxarr.f90  newcompi.f90  newe.f90  nxanyampi.f90  (+54 more)
srcg/appl/rmixaccumulate_csfg/: BUILDCONF.sh  CMakeLists.txt  Makefile  rmixaccumulate_csfg.f90
srcg/appl/rwfnestimate90_csfg/: Makefile  erwf.f90  summry.f90
srcg/lib/: Makefile
srcg/lib/lib9290_csfg/: BUILDCONF.sh  CMakeLists.txt  Makefile  analabv.f90  analabv_I.f90  csfg_ispar.f90  csfg_ispar_I.f90  csfg_itjpo.f90  csfg_itjpo_I.f90  csfg_jcup.f90  csfg_setqna_I.f90  cslhmpi_csfg.f90  cslhmpi_csfg_I.f90  fictious_csf.f90  findtype.f90  labpack.f90  labpack_I.f90  lodcsh2_csfg.f90  lodcsh2_csfg_I.f90  lodcsh_csfg.f90  lodcsh_csfg_I.f90  lodcslmpi_csfg.f90  lodcslmpi_csfg_I.f90  lodstate_csfg.f90  lodstate_csfg_I.f90  printlabelv.f90  rcsfsymexpand.f90  rcsfsymexpand_I.f90  setcsh_csfg.f90  setcsll_csfg.f90  setcsll_csfg_I.f90  setlaborb.f90  setlaborb_I.f90  testfiles.f90  testfiles_I.f90
srcg/lib/libdvd90mpi/: BUILDCONF.sh  CMakeLists.txt  Makefile  dvdrvr_I.f90  dvdson.f90  newvec_I.f90  tstsel_I.f90
srcg/lib/libme_csfg/: BUILDCONF.sh  CMakeLists.txt  Makefile  analabv.f90  auxblk.f90  bessel.f90  breit_d.f90  brint1.f90  brint1_I.f90  brint2.f90  brint2_I.f90  brint3.f90  brint4.f90  brint5.f90  brint6.f90  dnicmv.f90  (+54 more)
srcg/tool/: BUILDCONF.sh  CMakeLists.txt  Makefile  Makefile_GRASP2K  rcsfgblocksplit_csfg.f90  rcsfgexpand_csfg.f90  rcsfgextend_csfg.f90  rcsfgsplit_csfg.f90  rdistHmatrix_csfg.f90  rlevels_csfg.f90  rsave_csfg
(+33 files in other folders)
